# bad-bets

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
bb-model/: Cargo.toml
src/: lib.rs  main.rs  teams.rs
