[package]
name = "bad-bets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0.113"
mongodb = "2.8.0"
